src/test/ui/compile-fail-migration/borrowck/borrowck-issue-2657-1.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/borrowck-issue-2657-1.rs:17:13
   |
LL |       Some(ref _y) => {
   |            ------ borrow of `x.0` occurs here
LL |         let _a = x; //~ ERROR cannot move
   |             ^^ move out of `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
